<resources>
    <string name="app_name">Krishi</string>

    <string name="localhost">http://192.168.43.120</string>

    <string name="lat_txt">0</string>
    <string name="long_txt">0</string>
    <string name="latitude">Lat</string>
    <string name="longitude">Long</string>
    <string name="wthr_btn">Weather Forecast</string>
    <string name="crop_btn">Crop Information</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_detected">No Location Detected</string>
    <string name="location_detected">Location enabled</string>
    <string name="conn_failed">Connection Failed. Please check your network settings.</string>
    <string name="RESULT_CANCELED">User chose not to make required location settings changes.</string>
    <string name="title_activity_scrolling1">Information Activity</string>
    <string name="paddy_btn">Paddy</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="day_cons">Day: </string>
    <string name="maxTemp_cons">Maximum Temperature: </string>
    <string name="minTemp_cons">Minimum Temperature: </string>
    <string name="humid_cons">Humidity: </string>
    <string name="cloud_cons">Clouds: </string>
    <string name="speed_cons">Speed of Wind: </string>
    <string name="weather_cons">Weather: </string>
    <string name="current_news">Current News and Updates</string>
    <string name="connection_error">connection_error</string>
    <string name="xml_error">xml_error</string>
    <string name="google_app_id">AIzaSyAf8FCQCL4hynw9tnucPoz-xd8eO9LsKxA</string>
    <string name="title_activity_web_view">web_view</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="govt_schemes">Govt Programmes</string>
    <string name="register_btn">Register/Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_news">Latest News</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_cropList">Package of Practices</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Mobile Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_new_register">New User Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This phone number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="minimum_length_req">Minimum length of this field should be 5 characters</string>
    <string name="error_field">Error in this field</string>
    <string name="pick_one">Who Are You?</string>
    <string name="user_registration_successful">User Registration Successful</string>
    <string name="user_login_successful">User Login Successful</string>
    <!-- Strings related to dashboard -->
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="Button_Add_Item">Add Item to List</string>
    <string name="dashboard">Dashboard</string>

    <!-- Strings related to DialogLayout -->

    <string name="total_produce">Volume of produce(in Quintals)</string>
    <string name="crop_to_sell">Name of Crop </string>
    <string name="price_quintal">Minimum Price per Quintal</string>
    <string name="max_price_quintal">Maximum Price per Quintal</string>
    <string name="min_sell_vol">Minimum Volume to Sell per Buyer</string>
    <string name="min_buy">Volume to Buy(in Quintals)</string>

    <string-array name="crop_list">
        <item>Paddy</item>
        <item>Maize</item>
        <item>SugarCane</item>
        <item>Potato</item>
        <item>Tomato</item>
        <item>Wheat</item>
    </string-array>
    <string-array name="year_list">
        <item>2010_11</item>
        <item>2011_12</item>
        <item>2012_13</item>
        <item>2013_14</item>
        <item>2014_15</item>
        <item>2015_16</item>
    </string-array>

    <string-array name="crop_category">
    <item>Soil</item>
    <item>Season</item>
    <item>Area</item>
    <item>Temperature</item>
    </string-array>

    <string name="add_item">Add Item</string>

    <string name="totProduceError">This value should be greater than 0</string>
    <string name="FromListError">This value should be from the list</string>
    <string name="change_profile">Change Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_profile_msg">You are about to delete your account. Are you sure you want to do this?</string>
    <string name="delete_item_msg">You are about to delete this item. Are you sure you want to do this?</string>
    <string name="search_to_buy">Search to Buy</string>

    <!-- Strings related to custom_row_sellerlist -->
    <string name="idTextView">ID: </string>
    <string name="min_vol_sell">Minimum Volume to Sell</string>
    <string name="date_to_add">Date Item Added</string>
    <string name="address">Address:</string>
    <string name="bid">Bid</string>
    <string name="contact">Contact</string>
    <string name="search">Search</string>
    <string name="title_activity_buyer_dashboard">BuyerDashboardActivity</string>

    <string name="max_bid_string">Maximum Bid (Rs/Quintal)</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="search_item">Search New Item</string>
    <string name="my_bid">My Bid</string>
    <string name="confirm">CONFIRM</string>

    <string name="select_year">Select Year </string>
    <string name="title_activity_msp">Minimum Support Price</string>
    <string name="enter_details">Enter Details</string>
    <string name="search_msp">Search MSP</string>

    <string name="variety">Variety</string>
    <string name="year">YEAR</string>
    <string name="crop">Crop</string>
    <string name="msp">MSP</string>
</resources>
